--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
  
   <meta charset="utf-8">
   <link rel ="stylesheet" type="text/css" href="main.css">
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   <title></title>
 </head>
 <body>
-<div class="navigation">
+<section class="nav_bar">
    <header>
-    <nav>
         <img src="images/sixteenlogo.png" alt="Sixteen Logo">
-    </nav>
-    </header>
-    </div>
- 
+       </section>
+     </header>
+<section class="content">
     <h1>WE ARE SIXTEEN DIGITAL AGENCY</h1>   
-    <p>Based on  Jakarta, Indonesia</p>
-   
+    <span><em>Based on  Jakarta, Indonesia</em></span>
+    <br>
+ 
     <img src="images/arrow.png" alt="Arrow" width="25" height="14">
+</section>
+<section>
+  <div id="mobile">
+     <img src="images/mobile_07.png" alt="Iphone" height="207" width="78">
+    </div>
+ <section class="who_are_we">
+        <h2>WHO WE ARE</h2>
+     </section>
+    <p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit quam in omnis voluptates, optio architecto doloremque eius, nihil, error nemo cum ad consequuntur numquam saepe quibusdam nam dolore sunt</p>
+    </section>
+   <p class="one">Learn More</p>
+    </section>
+
+<div class="container">
+    <div class="video">
+        <video poster="images/collegestudents.jpg" alt="Video"></video>
+    </div>
 </div>
-     <img src="images/mobile_07.png" alt="Iphone">
+   <section class="ourservices">
+       <h3><uppercase>Our Services</uppercase></h3>
+   </section>
+    </body>
+</html>
