graphic design logo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
     </div>
 </div>
    <section class="ourservices">
-       <h3><uppercase>Our Services</uppercase></h3>
+       <h3>Our Service</h3>
+       <p3>&#8220; Asperiores ea commodi eius a quo omnis esse &#8221;</p3>
+   </section>
+   <section class="graphicdesign">
+       <h4>graphic design</h4>
+       <p4>Eius quae. Eveniet veniam repelledus eos, vitae repudiandae deleniti dol rum</p4>
+   </section>
+   <section class="mobileapp">
+       <h5>mobile app development</h5>
+       <p5>Repellendus consequatur perferendis vitae neque eum similique possimus facilis</p5>
+   </section>
+   <section class="webdesign">
+       <h6>web design & development</h6>
+       <p6>inventore nesciunt velit voluptas ac santium harum temporibus</p6>
    </section>
     </body>
 </html>
