--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <section class="nav_bar">
    <header>
         <img src="images/sixteenlogo.png" alt="Sixteen Logo">
+<section class="toggle"> 
+      <img src="images/toggle.png" alt="navigation";
        </section>
+ </section>
+       
      </header>
 <section class="content">
     <h1>WE ARE SIXTEEN DIGITAL AGENCY</h1>   
@@ -20,7 +24,7 @@
  
     <img src="images/arrow.png" alt="Arrow" width="25" height="14">
 </section>
-<section>
+<section class="secondpart">
   <div id="mobile">
      <img src="images/mobile_07.png" alt="Iphone" height="207" width="78">
     </div>
@@ -28,7 +32,6 @@
         <h2>WHO WE ARE</h2>
      </section>
     <p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit quam in omnis voluptates, optio architecto doloremque eius, nihil, error nemo cum ad consequuntur numquam saepe quibusdam nam dolore sunt</p>
-    </section>
    <p class="one">Learn More</p>
     </section>
 
@@ -36,7 +39,7 @@
     <div class="video">
         <video poster="images/collegestudents.jpg" alt="Video"></video>
     </div>
-</div>
+
    <section class="ourservices">
        <h3>Our Service</h3>
        <p3>&#8220; Asperiores ea commodi eius a quo omnis esse &#8221;</p3>
@@ -53,5 +56,6 @@
        <h6>web design & development</h6>
        <p6>inventore nesciunt velit voluptas ac santium harum temporibus</p6>
    </section>
+   </div>
     </body>
 </html>
