--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel ="stylesheet" type="text/css" href="main.css">
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+  <base href="https://github.com/lizbachmann/Sixteen-website.git">
   <title></title>
 </head>
 <body>
