--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
    
     <section class="services_section">
         <div class="head_combo1">
-            <h2 id="h2_ver_2">OUR <span id="green_text"> SERVICES</span> </h2>
+            <h id="h2_ver_2">OUR<span id="green_text"> SERVICES</span></h>
             <h3>“ Asperiores ea commodi eius a quo omnis esse ”</h3>
             <img class="ellipsebar" src="images/ellipse.png" alt="black sepretor">
             <hr>
         </div>
         <!--End our header services -->
 
-
-        <div class="services">
+ <div class="services">
         
  <ul>
      <li>
