Service section Edit the header placing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    </header>
     <!-- greeting -->
   <section class="greeting">
-    <div>
+    <div class="sixteen">
           <h1>We Are Sixteen Digital Agency</h1>
           <span>Based on Jakarta, Indonesia</span>
        </div>
@@ -42,7 +42,7 @@
  <!-- Top: Our Services Section -->
    
     <section class="services_section">
-        <div class="head_combo1">
+        <div class="heading">
             <h id="h2_ver_2">OUR<span id="green_text"> SERVICES</span></h>
             <h3>“ Asperiores ea commodi eius a quo omnis esse ”</h3>
             <img class="ellipsebar" src="images/ellipse.png" alt="black sepretor">
@@ -53,25 +53,25 @@
  <div class="services">
         
  <ul>
-     <li>
-          <img src="images/paintbrushlogo.png" alt="brush pic" class="paintbrush">
-     <div class="paint">
+     <li class="service-icon">
+          <img src="images/paintbrushlogo.png" alt="brush pic" class="service-img">
+     <div class="service-info">
              <h2>graphic design</h2>
             <p>Eius quae. Eveniet veniam repelledus eos, vitae repudiandae deleniti dol rum</p>
          </div>
                  </li>
                     <!-- second icon-->
- <li>
-     <img src="images/mobilelogo.png" alt="tiny phone pic"> 
-    <div class="mobile">
+ <li class="service-icon">
+     <img src="images/mobilelogo.png" alt="tiny phone pic" class="service-img"> 
+    <div class="service-info">
        <h2>modile app development</h2>
        <p>Repellendus consequatur perferendis vitae neque eum similique possimus facilis</p>
          </div>
              </li>
        <!--third icon -->
-<li>
-     <img src="images/monitiorlogo.png" alt="super small monitor pic">
-    <div class="monitor">
+<li class="service-icon">
+     <img src="images/monitiorlogo.png" alt="super small monitor pic" class="service-img">
+    <div class="service-info">
           <h2> web design & development</h2>
           <p>inventore nesciunt velit voluptas ac santium harum temporibus</p>       
           </div> 
