cleaning up css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="main.css">
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>  
 <body>
   <!-- navigation and logo -->
@@ -278,7 +278,7 @@
 <section class="newsletter">
     <h2 class="email">Join Our Newsletter for article Update
         <input type="url" class="newsletter-email" placeholder="example@gmail.com">
-    <img src="images/form.png" alt="form-email" class="form-image"></h2>
+        <a href="#"><img src="images/form.png" alt="form-email" class="form-image"></a>
     
     </section>
        
