--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <label>E-mail
         <input type="url" class="email-info" placeholder="lbachmann06@gmail.com"></label>
         <label>Message
-        <textarea name="comments" cols="36" rows="3" class="message-form">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you..</textarea></label>
+        <textarea name="comments" cols="36" rows="3" class="message-form"></textarea></label>
   <div class="submit-button">
          <input type="submit" value="Send" class="sign-up-button">
 
